--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "BLE-beacon-data-mining-front",
+  "name": "ble-beacon-data-mining-front",
   "version": "0.1.0",
   "author": "Samuel Martín Morales alu0101359526@ull.edu.es",
   "private": true,
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.96",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
+    "flowbite": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -40,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.3"
   }
 }
