--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "Samuel Martín Morales alu0101359526@ull.edu.es",
   "private": true,
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
