--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@types/react-dom": "^18.2.25",
     "flowbite": "^2.3.0",
     "leaflet": "^1.9.4",
+    "leaflet.fullscreen": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
+    "react-leaflet-draw": "^0.20.4",
+    "react-leaflet-fullscreen": "^4.1.1",
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
