--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^18.2.25",
     "flowbite": "^2.3.0",
     "leaflet": "^1.9.4",
+    "leaflet-draw": "^1.0.4",
     "leaflet.fullscreen": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
