--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.18.96",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
+    "antd": "^5.17.3",
     "flowbite": "^2.3.0",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
