--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "Samuel Martín Morales alu0101359526@ull.edu.es",
   "private": true,
   "dependencies": {
+    "@ant-design/charts": "^2.1.1",
     "@tailwindcss/forms": "^0.5.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
