--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/file-saver": "^2.0.7",
     "@types/jest": "^27.5.2",
+    "@types/json2csv": "^5.0.7",
     "@types/node": "^16.18.96",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
     "antd": "^5.17.3",
+    "file-saver": "^2.0.5",
     "flowbite": "^2.3.0",
+    "json2csv": "6.0.0-alpha.2",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
     "leaflet.fullscreen": "^3.0.2",
     "moment": "^2.30.1",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
@@ -56,6 +61,7 @@
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.12",
+    "@types/papaparse": "^5.3.14",
     "tailwindcss": "^3.4.3"
   }
 }
