--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "leaflet-draw": "^1.0.4",
     "leaflet.fullscreen": "^3.0.2",
     "moment": "^2.30.1",
+    "nodemailer": "^6.9.13",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
