--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@ant-design/charts": "^2.1.1",
+    "@ant-design/pro-components": "^2.7.10",
     "@ant-design/pro-table": "^3.16.0",
     "@tailwindcss/forms": "^0.5.7",
     "@testing-library/jest-dom": "^5.17.0",
