--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "@types/node": "^16.18.96",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
+    "@types/testing-library__jest-dom": "^6.0.0",
     "antd": "^5.17.3",
+    "extend-expect": "link:@testing-library/jest-dom/extend-expect",
     "file-saver": "^2.0.5",
     "flowbite": "^2.3.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "json2csv": "6.0.0-alpha.2",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
@@ -35,13 +39,15 @@
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "ts-jest": "^29.1.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "HTTPS=true PORT=3001 react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest --config=jest.config.js",
+    "coverage": "jest --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
