feat: first rest of home component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "noEmit": true,
     "baseUrl": ".",
     "jsx": "react-jsx",
-    "typeRoots": ["node_modules/@types", "src"]
+    "typeRoots": ["node_modules/@types", "src"],
   },
   "paths": {
     "*": ["src/*"]
