--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/enzyme": "^3.10.18",
+    "@types/enzyme-adapter-react-16": "^1.0.9",
     "@types/file-saver": "^2.0.7",
     "@types/jest": "^27.5.2",
     "@types/json2csv": "^5.0.7",
@@ -19,6 +21,8 @@
     "@types/react-dom": "^18.2.25",
     "@types/testing-library__jest-dom": "^6.0.0",
     "antd": "^5.17.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.8",
     "extend-expect": "link:@testing-library/jest-dom/extend-expect",
     "file-saver": "^2.0.5",
     "flowbite": "^2.3.0",
