--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@ant-design/charts": "^2.1.1",
     "@ant-design/pro-components": "^2.7.10",
     "@ant-design/pro-table": "^3.16.0",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
     "@tailwindcss/forms": "^0.5.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -21,6 +24,7 @@
     "@types/react-dom": "^18.2.25",
     "@types/testing-library__jest-dom": "^6.0.0",
     "antd": "^5.17.3",
+    "babel-jest": "^29.7.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.8",
     "extend-expect": "link:@testing-library/jest-dom/extend-expect",
